--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,7 +1,3 @@
 {
-  "*.{js,ts,tsx,cjs,mjs}": [
-    "npm run lint:fix",
-    "npm run format",
-    "npm run test"
-  ]
+  "*.{js,ts,tsx,cjs,mjs}": ["npm run lint:fix", "npm run format"]
 }
