--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint-staged": "npx lint-staged",
     "prepare": "husky",
     "test": "jest --detectOpenHandles --forceExit",
+    "test:ci": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
