chore: add ci/cd

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=dfsilvadev_challange-blog-api
-sonar.organization=dfsilvadev
+sonar.projectKey=dfsilva-dxp_blog-challenge
+sonar.organization=dfsilva-dxp
 
 # Informações do projeto
-sonar.projectName=Challenge Blog API
+sonar.projectName=Blog Challenge
 sonar.projectVersion=1.0.0
 
 # Configurações de código fonte
