--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,11 @@ env:
   DATABASE_URL: postgresql://test_user:test_password@localhost:5432/test_blog_db
 
 jobs:
-  # Job para verificar qualidade do código
+  # Job para verificar qualidade do código (paralelo)
   code-quality:
     name: Code Quality
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     
     steps:
     - name: Checkout code
@@ -29,8 +30,18 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'yarn'
         
+    - name: Cache node_modules
+      uses: actions/cache@v4
+      with:
+        path: |
+          node_modules
+          ~/.cache/yarn
+        key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+          
     - name: Install dependencies
-      run: yarn install --frozen-lockfile
+      run: yarn install --frozen-lockfile --prefer-offline
       
     - name: Check code formatting with Prettier
       run: yarn format --check
@@ -41,10 +52,19 @@ jobs:
     - name: Check TypeScript compilation
       run: yarn build
       
-  # Job para executar testes
+    - name: Cache build artifacts
+      uses: actions/cache@v4
+      with:
+        path: dist
+        key: ${{ runner.os }}-build-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-build-
+          
+  # Job para executar testes (paralelo)
   test:
     name: Test Suite
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     
     services:
       postgres:
@@ -71,8 +91,18 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'yarn'
         
+    - name: Cache node_modules
+      uses: actions/cache@v4
+      with:
+        path: |
+          node_modules
+          ~/.cache/yarn
+        key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+          
     - name: Install dependencies
-      run: yarn install --frozen-lockfile
+      run: yarn install --frozen-lockfile --prefer-offline
       
     - name: Wait for PostgreSQL
       run: |
@@ -86,6 +116,14 @@ jobs:
       env:
         DATABASE_URL: ${{ env.DATABASE_URL }}
         
+    - name: Cache coverage reports
+      uses: actions/cache@v4
+      with:
+        path: coverage
+        key: ${{ runner.os }}-coverage-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-coverage-
+          
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       with:
@@ -94,10 +132,11 @@ jobs:
         name: codecov-umbrella
         fail_ci_if_error: false
         
-  # Job para validar Docker
+  # Job para validar Docker (paralelo)
   docker-validation:
     name: Docker Validation
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     
     steps:
     - name: Checkout code
@@ -106,13 +145,27 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       
+    - name: Cache Docker layers
+      uses: actions/cache@v4
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+          
     - name: Validate Dockerfile
       uses: hadolint/hadolint-action@v3.1.0
       with:
         dockerfile: Dockerfile
         
     - name: Build Docker image
-      run: docker build -t blog-api .
+      run: |
+        docker buildx build \
+          --cache-from type=local,src=/tmp/.buildx-cache \
+          --cache-to type=local,dest=/tmp/.buildx-cache-new,mode=max \
+          -t blog-api .
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
       
     - name: Test Docker image
       run: |
@@ -120,10 +173,11 @@ jobs:
         sleep 10
         docker stop test-container
         
-  # Job para segurança
+  # Job para segurança (paralelo)
   security:
     name: Security Scan
     runs-on: ubuntu-latest
+    timeout-minutes: 8
     
     steps:
     - name: Checkout code
@@ -135,8 +189,18 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'yarn'
         
+    - name: Cache node_modules
+      uses: actions/cache@v4
+      with:
+        path: |
+          node_modules
+          ~/.cache/yarn
+        key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+          
     - name: Install dependencies
-      run: yarn install --frozen-lockfile
+      run: yarn install --frozen-lockfile --prefer-offline
       
     - name: Run npm audit
       run: yarn audit --audit-level moderate
@@ -149,12 +213,12 @@ jobs:
         args: --severity-threshold=high
       continue-on-error: true
       
-  # Job para deploy (apenas na main)
-  deploy:
-    name: Deploy
+  # Job para análise de performance
+  performance:
+    name: Performance Analysis
     runs-on: ubuntu-latest
-    needs: [code-quality, test, docker-validation, security]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    timeout-minutes: 12
+    needs: [code-quality, test]
     
     steps:
     - name: Checkout code
@@ -166,35 +230,32 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'yarn'
         
+    - name: Cache node_modules
+      uses: actions/cache@v4
+      with:
+        path: |
+          node_modules
+          ~/.cache/yarn
+        key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+          
     - name: Install dependencies
-      run: yarn install --frozen-lockfile
+      run: yarn install --frozen-lockfile --prefer-offline
       
     - name: Build application
       run: yarn build
       
-    - name: Create release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: v${{ github.run_number }}
-        release_name: Release v${{ github.run_number }}
-        body: |
-          Automated release from CI/CD pipeline
-          
-          - Build: ${{ github.run_number }}
-          - Commit: ${{ github.sha }}
-          - Branch: ${{ github.ref }}
-        draft: false
-        prerelease: false
-      continue-on-error: true
-      
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: build-artifacts
-        path: |
-          dist/
-          package.json
-          yarn.lock
-        retention-days: 30 
+    - name: Analyze bundle size
+      run: |
+        echo "Bundle size analysis:"
+        du -sh dist/
+        find dist/ -name "*.js" -exec wc -l {} + | tail -1
+        echo "Total files in dist:"
+        find dist/ -type f | wc -l
+        
+    - name: Performance test
+      run: |
+        echo "Starting performance test..."
+        time yarn test:ci
+        echo "Performance test completed" 
