--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,28 @@
 node_modules
 npm-debug.log
-.env
-Dockerfile
-.dockerignore
+yarn-debug.log
+yarn-error.log
 .git
-.husky
+.gitignore
+README.md
+.env
+.nyc_output
 coverage
+.nyc_output
+.coverage
+coverage.json
+*.lcov
+.cache
+.parcel-cache
+.next
+.nuxt
 dist
+build
+.DS_Store
+*.tgz
+*.tar.gz
+.vscode
+.idea
+*.swp
+*.swo
+*~
