--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -2,6 +2,6 @@
   "*.{js,ts,tsx,cjs,mjs}": [
     "npm run lint:fix",
     "npm run format",
-    "jest --bail --findRelatedTests"
+    "npm run test:changed"
   ]
 }
