--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "singleQuote": true,
   "tabWidth": 2,
   "printWidth": 80,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "endOfLine": "lf"
 }
