- Adicionando testes de autenticação; - Adicionando validaçõesde campos no middleware das rotas; - Configurando Rotas Create do User e Login da Auth.

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ POSTGRES_USER='<DB_USER>'
 POSTGRES_PASSWORD='<DB_PASSWORD>'
 POSTGRES_DB='<DB_NAME>'
 
+# JWT
+JWT_SECRET='<KEY>'
+
 # EXPRESS
 PORT=3001
 NODE_ENV=development
