--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,15 +60,21 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: SonarCloud Scan
-        run: yarn
-      - name: Test and coverage
-        run: yarn test
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v4
+      - name: Download coverage artifacts
+        uses: actions/download-artifact@v4
         with:
           name: coverage
           path: coverage
+      - name: Install dependencies
+        run: yarn install
+      - name: Run tests and generate coverage
+        run: yarn test:coverage
+      - name: Verify coverage files exist
+        run: |
+          echo "Checking if coverage files exist:"
+          ls -la coverage/
+          echo "Content of lcov.info:"
+          head -20 coverage/lcov.info
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v5.0.0
         env:
