--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,12 @@ sonar.language=ts
 sonar.sourceEncoding=UTF-8
 
 sonar.sources=src/
-sonar.test.inclusions=src/**/*.test.tsx
-sonar.exclusions=src/**/*.test.{js,jsx,ts,tsx},src/index.tsx
+sonar.tests=src/
+sonar.test.inclusions=src/**/*.test.ts,src/**/*.spec.ts
+sonar.exclusions=src/**/*.test.ts,src/**/*.spec.ts,src/index.tsx
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.coverage.exclusions=src/**/*.test.ts,src/**/*.spec.ts,src/index.tsx
+
+# Configurações adicionais para melhorar a detecção de cobertura
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.coverage.inclusions=src/**/*.ts
