fear: Desacoplamento da construção das rotas na main, pois o estava dando erro de sintaxe no Jest o tentar rodar os testes

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Daniel Silva <dfsilva.dxp@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/main.js",
-    "dev": "ts-node src/main.ts",
+    "start": "node dist/server.js",
+    "dev": "ts-node src/server.ts",
     "build": "tsc",
     "format": "prettier --write .",
     "lint": "eslint . ",
