--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node dist/main.js",
-    "dev": "ts-node src/server.ts",
+    "dev": "ts-node src/main.ts",
     "build": "tsc",
     "format": "prettier --write .",
     "lint": "eslint . ",
@@ -21,7 +21,9 @@
     "test:changed": "jest --bail --findRelatedTests --passWithNoTests",
     "test:staged": "jest --bail --findRelatedTests --onlyChanged --passWithNoTests",
     "test:all": "jest --detectOpenHandles --forceExit --coverage",
-    "sonar:local": "yarn test:coverage && sonar-scanner"
+    "sonar:local": "yarn test:coverage && sonar-scanner",
+    "docker:build": "docker build -t blog-api:local .",
+    "docker:test": "docker run -d --name test-container -p 3000:3000 blog-api:local && sleep 10 && curl -f http://localhost:3000/health && docker stop test-container && docker rm test-container"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
