--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
     "test:coverage": "jest --coverage",
     "test:changed": "jest --bail --findRelatedTests --passWithNoTests",
     "test:staged": "jest --bail --findRelatedTests --onlyChanged --passWithNoTests",
-    "test:all": "jest --detectOpenHandles --forceExit --coverage"
+    "test:all": "jest --detectOpenHandles --forceExit --coverage",
+    "sonar:local": "yarn test:coverage && sonar-scanner",
+    "docker:build": "docker build -t blog-api:local .",
+    "docker:test": "docker run -d --name test-container -p 3000:3000 blog-api:local && sleep 10 && curl -f http://localhost:3000/health && docker stop test-container && docker rm test-container"
   },
   "dependencies": {
-    "@types/validator": "^13.15.2",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
-    "pg": "^8.16.3"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -38,6 +43,7 @@
     "@types/node": "^24.0.10",
     "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.3",
+    "@types/validator": "^13.15.2",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
     "eslint": "^9.30.1",
