--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "^24.0.10",
     "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.3",
+    "@types/validator": "^13.15.2",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
     "eslint": "^9.30.1",
