--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:16
@@ -13,7 +11,9 @@ services:
       - '5433:5432'
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./src/database/models/schema.sql:/docker-entrypoint-initdb.d/init.sql # <--- ATENÇÃO AQUI!
+      # Schema base (blog) e migrations do módulo pedagógico — executados em ordem na primeira subida do container
+      - ./src/database/models/schema.sql:/docker-entrypoint-initdb.d/01_schema.sql
+      - ./src/database/migrations/001_pedagogico.sql:/docker-entrypoint-initdb.d/02_pedagogico.sql
 
   app:
     build: .
